[gd_scene load_steps=4 format=3 uid="uid://buge0v3c0knid"]

[ext_resource type="Script" path="res://Jayden/Rooms/finalRoomLogic.gd" id="1_srxap"]
[ext_resource type="TileSet" uid="uid://dg6l0pdseouj4" path="res://Jayden/Rooms/tiles/final_tiles.tres" id="2_noctc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_okkb8"]
size = Vector2(1071, 1069)

[node name="FinalRoom" type="Node2D"]
script = ExtResource("1_srxap")

[node name="Tiles" type="TileMap" parent="."]
texture_filter = 1
tile_set = ExtResource("2_noctc")
format = 2
layer_0/tile_data = PackedInt32Array(0, 1, 0, 1, 65537, 0, 2, 65537, 0, 3, 65537, 0, 4, 65537, 0, 5, 65537, 0, 6, 65537, 0, 7, 196609, 3, 8, 65537, 1, 9, 65537, 1, 10, 131073, 3, 11, 65537, 0, 12, 65537, 0, 17, 131073, 0, 16, 65537, 0, 15, 65537, 0, 14, 65537, 0, 13, 65537, 0, 65536, 1, 1, 131072, 1, 1, 196608, 1, 1, 262144, 1, 1, 327680, 1, 1, 393216, 1, 1, 458752, 262145, 1, 524288, 65537, 1, 589824, 65537, 1, 655360, 262145, 0, 720896, 1, 1, 786432, 1, 1, 851968, 1, 1, 917504, 1, 1, 983040, 1, 1, 1048576, 1, 1, 1114112, 1, 2, 1114113, 65537, 2, 1114114, 65537, 2, 1114115, 65537, 2, 1114116, 65537, 2, 1114117, 65537, 2, 1114118, 65537, 2, 1114119, 65537, 3, 1114120, 65537, 1, 1114121, 65537, 1, 1114122, 1, 3, 1114123, 65537, 2, 1114124, 65537, 2, 1114125, 65537, 2, 1114126, 65537, 2, 1114127, 65537, 2, 1114129, 131073, 2, 1114128, 65537, 2, 1048593, 131073, 1, 983057, 131073, 1, 917521, 131073, 1, 851985, 131073, 1, 786449, 131073, 1, 720913, 131073, 1, 655377, 196609, 0, 655376, 65537, 1, 589840, 65537, 1, 524304, 65537, 1, 458768, 65537, 1, 393232, 65537, 1, 327696, 65537, 1, 65553, 131073, 1, 131089, 131073, 1, 196625, 131073, 1, 262161, 131073, 1, 327697, 131073, 1, 393233, 131073, 1, 458769, 196609, 1, 524305, 65537, 1, 589841, 65537, 1, 1048592, 65537, 1, 1048591, 65537, 1, 1048590, 65537, 1, 1048589, 65537, 1, 1048588, 65537, 1, 1048587, 65537, 1, 1048586, 65537, 1, 1048585, 65537, 1, 1048584, 65537, 1, 1048583, 65537, 1, 1048582, 65537, 1, 1048581, 65537, 1, 1048580, 65537, 1, 1048579, 65537, 1, 1048578, 65537, 1, 1048577, 65537, 1, 983041, 65537, 1, 917505, 65537, 1, 851969, 65537, 1, 786433, 65537, 1, 720897, 65537, 1, 655361, 65537, 1, 589825, 65537, 1, 524289, 65537, 1, 458753, 65537, 1, 393217, 65537, 1, 327681, 65537, 1, 262145, 65537, 1, 196609, 65537, 1, 131073, 65537, 1, 65537, 65537, 1, 65538, 65537, 1, 65539, 65537, 1, 65540, 65537, 1, 65541, 65537, 1, 65542, 65537, 1, 65543, 65537, 1, 65544, 65537, 1, 65545, 65537, 1, 65546, 65537, 1, 65547, 65537, 1, 65548, 65537, 1, 65549, 65537, 1, 65550, 65537, 1, 65551, 65537, 1, 65552, 65537, 1, 131088, 65537, 1, 131087, 65537, 1, 131086, 65537, 1, 131085, 65537, 1, 131084, 65537, 1, 131083, 65537, 1, 131082, 65537, 1, 131081, 65537, 1, 131080, 65537, 1, 131079, 65537, 1, 131078, 65537, 1, 131077, 65537, 1, 131076, 65537, 1, 131075, 65537, 1, 131074, 65537, 1, 196610, 65537, 1, 196611, 65537, 1, 196612, 65537, 1, 196613, 65537, 1, 196614, 65537, 1, 196615, 65537, 1, 196616, 65537, 1, 196617, 65537, 1, 196618, 65537, 1, 196619, 65537, 1, 196620, 65537, 1, 196621, 65537, 1, 196622, 65537, 1, 196623, 65537, 1, 196624, 65537, 1, 262160, 65537, 1, 720912, 65537, 1, 786448, 65537, 1, 851984, 65537, 1, 917520, 65537, 1, 983056, 65537, 1, 983055, 65537, 1, 983054, 65537, 1, 983053, 65537, 1, 983052, 65537, 1, 983051, 65537, 1, 983050, 65537, 1, 983049, 65537, 1, 983048, 65537, 1, 983047, 65537, 1, 983046, 65537, 1, 983045, 65537, 1, 983044, 65537, 1, 983043, 65537, 1, 983042, 65537, 1, 917506, 65537, 1, 851970, 65537, 1, 786434, 65537, 1, 720898, 65537, 1, 655362, 65537, 1, 589826, 65537, 1, 524290, 65537, 1, 458754, 65537, 1, 393218, 65537, 1, 327682, 65537, 1, 262146, 65537, 1, 262147, 65537, 1, 262151, 65537, 1, 262152, 65537, 1, 262153, 65537, 1, 262154, 65537, 1, 262155, 65537, 1, 262156, 65537, 1, 262157, 65537, 1, 262158, 65537, 1, 262159, 65537, 1, 327695, 65537, 1, 393231, 65537, 1, 458767, 65537, 1, 524303, 65537, 1, 589839, 65537, 1, 655375, 65537, 1, 720911, 65537, 1, 786447, 65537, 1, 851983, 65537, 1, 917519, 65537, 1, 917518, 65537, 1, 917517, 65537, 1, 917515, 65537, 1, 917514, 65537, 1, 917513, 65537, 1, 917512, 65537, 1, 917511, 65537, 1, 917510, 65537, 1, 917509, 65537, 1, 917508, 65537, 1, 917507, 65537, 1, 851971, 65537, 1, 786435, 65537, 1, 720899, 65537, 1, 655363, 65537, 1, 589827, 65537, 1, 524291, 65537, 1, 458755, 65537, 1, 393219, 65537, 1, 327683, 65537, 1, 262148, 65537, 1, 262150, 65537, 1, 327692, 65537, 1, 327693, 65537, 1, 393230, 65537, 1, 458766, 65537, 1, 524302, 65537, 1, 589838, 65537, 1, 655374, 65537, 1, 720910, 65537, 1, 786446, 65537, 1, 851982, 65537, 1, 917516, 65537, 1, 851980, 65537, 1, 786444, 65537, 1, 786445, 65537, 1, 720909, 65537, 1, 655373, 65537, 1, 589837, 65537, 1, 327694, 65537, 1, 851981, 65537, 1, 524300, 65537, 1, 458764, 65537, 1, 393228, 65537, 1, 589836, 65537, 1, 655372, 65537, 1, 524301, 65537, 1, 458765, 65537, 1, 393229, 65537, 1, 720908, 65537, 1, 655371, 65537, 1, 589835, 65537, 1, 524299, 65537, 1, 458763, 65537, 1, 393227, 65537, 1, 327691, 65537, 1, 720907, 65537, 1, 786443, 65537, 1, 851978, 65537, 1, 786442, 65537, 1, 720906, 65537, 1, 655370, 65537, 1, 589834, 65537, 1, 524298, 65537, 1, 524297, 65537, 1, 458761, 65537, 1, 393225, 65537, 1, 393224, 65537, 1, 327687, 65537, 1, 327686, 65537, 1, 327685, 65537, 1, 262149, 65537, 1, 327684, 65537, 1, 327688, 65537, 1, 327689, 65537, 1, 327690, 65537, 1, 393226, 65537, 1, 393223, 65537, 1, 393222, 65537, 1, 393221, 65537, 1, 393220, 65537, 1, 458756, 65537, 1, 458757, 65537, 1, 458758, 65537, 1, 458759, 65537, 1, 458760, 65537, 1, 458762, 65537, 1, 524296, 65537, 1, 524295, 65537, 1, 524294, 65537, 1, 524293, 65537, 1, 524292, 65537, 1, 589828, 65537, 1, 589829, 65537, 1, 589830, 65537, 1, 589831, 65537, 1, 589832, 65537, 1, 589833, 65537, 1, 655369, 65537, 1, 655368, 65537, 1, 655367, 65537, 1, 655366, 65537, 1, 655365, 65537, 1, 720901, 65537, 1, 720902, 65537, 1, 720903, 65537, 1, 720904, 65537, 1, 720905, 65537, 1, 655364, 65537, 1, 720900, 65537, 1, 786436, 65537, 1, 851972, 65537, 1, 851973, 65537, 1, 851974, 65537, 1, 851975, 65537, 1, 851976, 65537, 1, 851977, 65537, 1, 851979, 65537, 1, 786441, 65537, 1, 786440, 65537, 1, 786439, 65537, 1, 786438, 65537, 1, 786437, 65537, 1)

[node name="RoomPos" type="Node2D" parent="."]
position = Vector2(36, 25)

[node name="RoomArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomArea"]
position = Vector2(576.5, 571.5)
shape = SubResource("RectangleShape2D_okkb8")

[node name="Label" type="Label" parent="."]
offset_left = 58.0
offset_top = 52.0
offset_right = 595.0
offset_bottom = 176.0
text = "Final Room"

[connection signal="body_entered" from="RoomArea" to="." method="_on_room_area_body_entered"]
[connection signal="body_exited" from="RoomArea" to="." method="_on_room_area_body_exited"]
